...
    <string name="location_current">Current location</string>
    <string name="location_last_known">Last known location</string>
    <string name="location_from_outing">From this outing</string>
    <string name="location_by_hand">Set by hand</string>
    <string name="location_none">No location yet</string>

    <string name="detail_photo_description">Photo of this cat</string>
    <string name="detail_title_ginger">Ginger cat</string>
    <string name="detail_title_ginger_white">Ginger &amp; white cat</string>
    <string name="detail_title_white">White cat</string>
    <string name="detail_title_tricolor_mostly_white">Calico cat</string>
    <string name="detail_title_tricolor_little_white">Calico cat</string>
    <string name="detail_title_brown">Brown cat</string>
...
    <string name="detail_photo_attaching">Attaching the photo</string>
    <string name="detail_open_photo">Open full screen</string>
    <string name="detail_back">Back</string>
    <string name="detail_position">%1$d / %2$d</string>
    <string name="detail_position_description">Cat %1$d of %2$d</string>
    <string name="detail_show_on_map">Show on the map</string>
    <string name="detail_set_location">Set on map</string>

    <string name="picker_back">Back</string>
    <string name="picker_map_description">Map. The point under the pin at its centre is the one saved</string>
    <string name="picker_hint">Move the map to put the pin where the cat was</string>
    <string name="picker_where_am_i">Where am I</string>
    <string name="picker_save">Save</string>
    <string name="picker_not_saved">Couldn\'t save the location</string>
    <string name="picker_position_unknown">Couldn\'t tell where you are</string>
    <string name="viewer_back">Back</string>
    <string name="viewer_open_in_gallery">Open in gallery</string>
    <string name="viewer_remove_photo">Remove photo</string>
    <string name="viewer_remove_photo_title">Remove this photo?</string>
    <string name="viewer_remove_photo_message">The cat and photos in your gallery will stay.</string>
    <string name="viewer_remove_cancel">Cancel</string>
    <string name="viewer_remove_confirm">Remove</string>
    <string name="viewer_remove_failed">Couldn\'t remove the photo</string>
    <string name="viewer_gallery_gone">This photo is no longer in the gallery</string>
    <string name="viewer_no_gallery_app">No app can show this photo</string>
    <string name="viewer_position">%1$d / %2$d</string>
    <string name="viewer_position_description">Photo %1$d of %2$d</string>

    <string name="tab_settings">Settings</string>
    <string name="settings_save_originals">Save camera photos to gallery</string>
    <string name="settings_save_originals_explained">Full-size originals, in the Cats Radar album. The app always keeps a smaller copy</string>
...
